// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component "GifGrid.js" Must show items when load the images with "useFetchGifs" 1`] = `
<Fragment>
  <h3
    className="animate_animated animate_fadeIn"
  >
    venom
  </h3>
  <div
    className="GifGrid_container"
  >
    <GifGridItem
      key="abc123"
      title="AnyThings"
      url="https:/localhost:3000/anythings.jpg"
    />
    <GifGridItem
      key="abc345"
      title="AnyThings"
      url="https:/localhost:3500/anythings.jpg"
    />
  </div>
</Fragment>
`;

exports[`Testing component "GifGrid.js" Take Snapshot from "GifGrid" 1`] = `
<Fragment>
  <h3
    className="animate_animated animate_fadeIn"
  >
    venom
  </h3>
  <p
    className="animate_animated animate_flash"
  >
    Loading
  </p>
  <div
    className="GifGrid_container"
  />
</Fragment>
`;
